--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,8 @@ src/testmypixipkg/__pycache__/__init__.cpython-312.pyc
 **/__pycache__/*
 *./**/.pyc
 **.pyc
+
+
+data/rawdata/*
+data/procdata/*
+data/results/*
