build: add tasklist extension for mkdocs

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -32,3 +32,7 @@ plugins:
 
 extra:
     homepage: https://bhklab.github.io/readii_2_roqc
+
+markdown_extensions:
+  - pymdownx.tasklist:
+      custom_checkbox: true
