build: update to latest version of readii

--- a/pixi.toml
+++ b/pixi.toml
@@ -17,11 +17,11 @@ ipython = "*"
 ipykernel = "*"
 jupyterlab = "*"
 pip = "*"
-numpy = ">=2.2.5,<3"
+numpy = ">=1.26.4e,<2"
 scikit-learn = ">=1.6.1,<2"
 
 [pypi-dependencies]
-readii = ">=1.26.0, <2"
+readii = ">=1.35.0, <2"
 
 ############################################## QUALITY ###############################################
 # Quality includes linting, type checking, and formatting
