--- a/config/datasets/HEAD-NECK-RADIOMICS-HN1.yaml
+++ b/config/datasets/HEAD-NECK-RADIOMICS-HN1.yaml
@@ -1,8 +1,21 @@
 DATA_SOURCE: "TCIA"
 DATASET_NAME: "HEAD-NECK-RADIOMICS-HN1"
 
-
 CLINICAL_FILE: "Copy of HEAD-NECK-RADIOMICS-HN1 Clinical data updated July 2020 2.csv"
 
 MIT_INDEX_FILE: "mit_betapipe_outputs_index.csv"
 
+### CLINICAL VARIABLE INFORMATION ###
+# Event values should be in the order [Alive_value, Dead_value]
+OUTCOME_VARIABLES:
+    time_label: "overall_survival_in_days"
+    event_label: "event_overall_survival"
+    convert_to_years: True
+    event_value_mapping: {}
+
+EXCLUSION_VARIABLES: {}
+
+TRAIN_TEST_SPLIT:
+    split: False
+    split_variable: {}
+    impute:
