--- a/config/datasets/NSCLC-Radiomics.yaml
+++ b/config/datasets/NSCLC-Radiomics.yaml
@@ -1,8 +1,21 @@
 DATA_SOURCE: "TCIA"
 DATASET_NAME: "NSCLC-Radiomics"
 
-
 CLINICAL_FILE: "NSCLC-Radiomics-Lung1.clinical-version3-Oct-2019.csv"
 
 MIT_INDEX_FILE: "mit_NSCLC-Radiomics_index.csv"
 
+### CLINICAL VARIABLE INFORMATION ###
+# Event values should be in the order [Alive_value, Dead_value]
+OUTCOME_VARIABLES:
+    time_label: "Survival.time"
+    event_label: "deadstatus.event"
+    convert_to_years: True
+    event_value_mapping: {}
+
+EXCLUSION_VARIABLES: {}
+
+TRAIN_TEST_SPLIT:
+    split: False
+    split_variable: {}
+    impute:
