--- a/pixi.toml
+++ b/pixi.toml
@@ -21,6 +21,11 @@ numpy = ">=1.26.4e,<2"
 scikit-learn = ">=1.6.1,<2"
 scikit-survival = ">=0.24.1,<0.25"
 r = ">=4.4,<4.5"
+r-base = ">=4.4.3,<4.5"
+radian = ">=0.6.15,<0.7"
+r-checkmate = ">=2.3.2,<3"
+r-yaml = ">=2.3.10,<3"
+openpyxl = ">=3.1.5,<4"
 
 [pypi-dependencies]
 readii = ">=1.35.0, <2"
