--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -35,4 +35,5 @@ extra:
 
 markdown_extensions:
   - pymdownx.tasklist:
-      custom_checkbox: true
+      custom_checkbox: false
+      clickable_checkbox: true
