feat: pull updates for environment variables from main

--- a/pixi.toml
+++ b/pixi.toml
@@ -11,6 +11,17 @@ platforms = ["osx-arm64", "linux-64", "win-64", "osx-64"]
 quality = { features = ["quality"], solve-group = "default" }
 docs = { features = ["docs"], solve-group = "default" }
 
+[activation]
+# convenient variables which can be used in scripts
+env.CONFIG = "${PIXI_PROJECT_ROOT}/config"
+env.METADATA = "${PIXI_PROJECT_ROOT}/metadata"
+env.LOGS = "${PIXI_PROJECT_ROOT}/logs"
+env.RAWDATA = "${PIXI_PROJECT_ROOT}/data/rawdata"
+env.PROCDATA = "${PIXI_PROJECT_ROOT}/data/procdata"
+env.RESULTS = "${PIXI_PROJECT_ROOT}/data/results"
+env.SCRIPTS = "${PIXI_PROJECT_ROOT}/workflow/scripts"
+
+
 [dependencies]
 python = ">=3.12"
 ipython = "*"
@@ -32,6 +43,9 @@ readii = ">=1.35.1, <2"
 
 [target.linux-64.dependencies]
 bioconductor-survcomp = ">=1.56.0,<2"
+
+[tasks]
+example_script = {cmd="python $SCRIPTS/example_script.py"}
 
 ############################################## QUALITY ###############################################
 # Quality includes linting, type checking, and formatting
