--- a/pixi.toml
+++ b/pixi.toml
@@ -40,6 +40,7 @@ openpyxl = ">=3.1.5,<4"
 
 [pypi-dependencies]
 readii = ">=1.35.1, <2"
+damply = ">=0.10.0, <0.11"
 
 [target.linux-64.dependencies]
 bioconductor-survcomp = ">=1.56.0,<2"
