--- a/pixi.toml
+++ b/pixi.toml
@@ -37,6 +37,7 @@ radian = ">=0.6.15,<0.7"
 r-checkmate = ">=2.3.2,<3"
 r-yaml = ">=2.3.10,<3"
 openpyxl = ">=3.1.5,<4"
+snakemake = ">=9.4.0,<10"
 
 [pypi-dependencies]
 readii = ">=1.35.1, <2"
