--- a/config/datasets/HEAD-NECK-RADIOMICS-HN1.yaml
+++ b/config/datasets/HEAD-NECK-RADIOMICS-HN1.yaml
@@ -1,22 +1,35 @@
 DATA_SOURCE: "TCIA"
 DATASET_NAME: "HEAD-NECK-RADIOMICS-HN1"
 
-CLINICAL_FILE: "Copy of HEAD-NECK-RADIOMICS-HN1 Clinical data updated July 2020 2.csv"
-
-MIT_COMMAND: "imgtools autopipeline ~/bhklab/radiomics/PublicDatasets/srcdata/HeadNeck/TCIA_HEAD-NECK-RADIOMICS-HN1/images/HEAD-NECK-RADIOMICS-HN1/unzipped/ ~/bhklab/radiomics/PublicDatasets/procdata/HeadNeck/TCIA_HEAD-NECK-RADIOMICS-HN1/mit2_HEAD-NECK-RADIOMICS-HN1 --modalities \"CT,RTSTRUCT\" -rmap \"GTV:GTV-1\" --roi-strategy MERGE --update-crawl -f {PatientID}_{SampleNumber}/{Modality}_{SeriesInstanceUID}/{ImageID}.nii.gz"
-MIT_INDEX_FILE: "mit2_HEAD-NECK-RADIOMICS-HN1_index.csv"
-
 ### CLINICAL VARIABLE INFORMATION ###
-# Event values should be in the order [Alive_value, Dead_value]
-OUTCOME_VARIABLES:
-    time_label: "overall_survival_in_days"
-    event_label: "event_overall_survival"
-    convert_to_years: True
-    event_value_mapping: {}
+CLINICAL:
+    FILE: "Copy of HEAD-NECK-RADIOMICS-HN1 Clinical data updated July 2020 2.csv"
+    OUTCOME_VARIABLES:
+        time_label: "overall_survival_in_days"
+        event_label: "event_overall_survival"
+        convert_to_years: True
+        event_value_mapping: {} # Event values should be in the order {0: Alive_value, 1: Dead_value}
+    EXCLUSION_VARIABLES: {}
 
-EXCLUSION_VARIABLES: {}
+### MED-IMAGETOOLS settings
+MIT:
+    #COMMAND: "imgtools autopipeline ~/bhklab/radiomics/PublicDatasets/srcdata/HeadNeck/TCIA_HEAD-NECK-RADIOMICS-HN1/images/HEAD-NECK-RADIOMICS-HN1/unzipped/ ~/bhklab/radiomics/PublicDatasets/procdata/HeadNeck/TCIA_HEAD-NECK-RADIOMICS-HN1/mit2_HEAD-NECK-RADIOMICS-HN1 --modalities \"CT,RTSTRUCT\" -rmap \"GTV:GTV-1\" --roi-strategy MERGE --update-crawl -f {PatientID}_{SampleNumber}/{Modality}_{SeriesInstanceUID}/{ImageID}.nii.gz"
+    ROI_MATCH_MAP:
+        GTV: GTV-1
+    MODALITIES: CT,RTSTRUCT
+    INDEX_FILE: "mit2_HEAD-NECK-RADIOMICS-HN1_index.csv"
 
-TRAIN_TEST_SPLIT:
-    split: False
-    split_variable: {}
-    impute: null
+### READII settings
+READII:
+    IMAGE_TYPES:
+        regions:
+            - "full"
+        permutations:
+            - "original"
+        crop:
+    TRAIN_TEST_SPLIT:
+        split: False
+        split_variable: {}
+        impute: null
+
+RANDOM_SEED: 10
