--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -3,15 +3,9 @@ from pathlib import Path
 import pandas as pd
 
 # could alternatively pass this in the CLI via `--configfile $CONFIG/config.yaml`
-configfile: dmpdirs.CONFIG / "datasets" / "NSCLC-Radiomics_test.yaml"
+# configfile: dmpdirs.CONFIG / "datasets" / "NSCLC-Radiomics_test.yaml"
 
 COMBINED_DATA_NAME = config["DATA_SOURCE"] + "_" + config["DATASET_NAME"]
-
-# print(COMBINED_DATA_NAME)
-
-# def get_crawl_index_data(mit_crawl_index) -> pd.DataFrame:
-#     index_df = pd.read_csv(mit_crawl_index)
-#     return index_df
 
 
 rule run_mit_autopipeline:
@@ -20,24 +14,26 @@ rule run_mit_autopipeline:
         mit_crawl_index=dmpdirs.RAWDATA / COMBINED_DATA_NAME / "images/.imgtools" / config["DATASET_NAME"] / "index.csv"
     output:
         mit_autopipeline_index=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}" / f"mit_{config["DATASET_NAME"]}_index.csv",
-        image_files=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}") 
+        output_directory=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}")
     params:
         modalities=config["MIT"]["MODALITIES"],
         roi_match_map=config["MIT"]["ROI_MATCH_MAP"]
     shell:
         """
-        imgtools autopipeline {input.input_directory} {output.image_files} \
+        imgtools autopipeline {input.input_directory} {output.output_directory} \
         --modalities {params.modalities} \
         --roi-match-map {params.roi_match_map} \
         --roi-strategy MERGE \
         --filename-format "{{PatientID}}_{{SampleNumber}}/{{Modality}}_{{SeriesInstanceUID}}/{{ImageID}}.nii.gz"
-        """   
+        """
+
 
 rule run_mit_index:
     input:
         dicom_dir=dmpdirs.RAWDATA / COMBINED_DATA_NAME / "images" / config["DATASET_NAME"]
     output:
-        directory(dmpdirs.RAWDATA / COMBINED_DATA_NAME / "images/.imgtools" / config["DATASET_NAME"])
+        directory(dmpdirs.RAWDATA / COMBINED_DATA_NAME / "images/.imgtools" / config["DATASET_NAME"]),
+        mit_crawl_index=dmpdirs.RAWDATA / COMBINED_DATA_NAME / "images/.imgtools" / config["DATASET_NAME"] / "index.csv"
     params:
         dataset_name= config["DATASET_NAME"]
     shell:
