refactor: get roi_strategy choice from dataset config file

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -18,12 +18,13 @@ rule run_mit_autopipeline:
     params:
         modalities=config["MIT"]["MODALITIES"],
         roi_match_map=config["MIT"]["ROI_MATCH_MAP"]
+        roi_strategy=config["MIT"]["ROI_STRATEGY"]
     shell:
         """
         imgtools autopipeline {input.input_directory} {output.output_directory} \
         --modalities {params.modalities} \
         --roi-match-map {params.roi_match_map} \
-        --roi-strategy MERGE \
+        --roi-strategy {params.roi_strategy} \
         --filename-format "{{PatientID}}_{{SampleNumber}}/{{Modality}}_{{SeriesInstanceUID}}/{{ImageID}}.nii.gz"
         """
 
