--- a/pixi.toml
+++ b/pixi.toml
@@ -38,6 +38,7 @@ r-checkmate = ">=2.3.2,<3"
 r-yaml = ">=2.3.10,<3"
 openpyxl = ">=3.1.5,<4"
 snakemake = ">=9.4.0,<10"
+click = ">=8.2.1,<9"
 
 [pypi-dependencies]
 readii = ">=1.35.1, <2"
