--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -21,4 +21,4 @@ rule run_readii:
     output:
         readii_images_directory=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}")
     shell:
-        "python scripts/readii/make_negative_controls.py --dataset {input.dataset}"
+        "python scripts/readii/make_negative_controls.py --dataset {input.dataset} --overwrite True --seed 10"
