--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -3,22 +3,24 @@ from damply import dirs as dmpdirs
 # could alternatively pass this in the CLI via `--configfile $CONFIG/config.yaml`
 # configfile: dmpdirs.CONFIG / "datasets" / "NSCLC-Radiomics_test.yaml"
 
-COMBINED_DATA_NAME = config["DATA_SOURCE"] + "_" + config["DATASET_NAME"]
-
 include: "scripts/mit/run_mit.smk"
 
 rule all:
     # Target rule
     input:
-        readii_images_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config["DATASET_NAME"]}"
+        readii_images_directory=expand(
+            dmpdirs.PROCDATA / "{DATA_SOURCE}_{DATASET_NAME}" / "images" / "readii_{DATASET_NAME}",
+            DATA_SOURCE=config["DATA_SOURCE"],
+            DATASET_NAME=config["DATASET_NAME"]
+        )
 
 
 rule run_readii:
     input:
-        mit_autopipeline_index=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}" / f"mit_{config["DATASET_NAME"]}_index.csv",
-        mit_niftis_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}",
+        mit_autopipeline_index=dmpdirs.PROCDATA / "{DATA_SOURCE}_{DATASET_NAME}" / "images" / "mit_{DATASET_NAME}" / "mit_{DATASET_NAME}_index.csv",
+        mit_niftis_directory=dmpdirs.PROCDATA / "{DATA_SOURCE}_{DATASET_NAME}" / "images" / "mit_{DATASET_NAME}",
         dataset=config["DATASET_NAME"]
     output:
-        readii_images_directory=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config["DATASET_NAME"]}")
+        readii_images_directory=directory(dmpdirs.PROCDATA / "{DATA_SOURCE}_{DATASET_NAME}" / "images" / "readii_{DATASET_NAME}")
     shell:
         "python scripts/readii/make_negative_controls.py --dataset {input.dataset} --overwrite True --seed 10"
