--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -17,8 +17,11 @@ rule run_readii:
     input:
         mit_autopipeline_index=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}" / f"mit_{config["DATASET_NAME"]}_index.csv",
         mit_niftis_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}",
-        dataset=config["DATASET_NAME"]
+        
     output:
         readii_images_directory=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config["DATASET_NAME"]}")
+    params:
+        dataset=config["DATASET_NAME"],
+        seed=config["RANDOM_SEED"]
     shell:
-        "python scripts/readii/make_negative_controls.py --dataset {input.dataset} --overwrite True --seed 10"
+        "python workflow/scripts/readii/make_negative_controls.py --dataset {params.dataset} --overwrite True --seed {params.seed}"
