feat: use all negative controls for NSCLC-Radiomics and HN1

--- a/config/datasets/HEAD-NECK-RADIOMICS-HN1.yaml
+++ b/config/datasets/HEAD-NECK-RADIOMICS-HN1.yaml
@@ -23,8 +23,12 @@ READII:
     IMAGE_TYPES:
         regions:
             - "full"
+            - "roi"
+            - "non_roi"
         permutations:
-            - "original"
+            - "shuffled"
+            - "sampled"
+            - "randomized"
         crop:
     TRAIN_TEST_SPLIT:
         split: False
