feat: add feature extraction settings and update note on ROI_MATCH_MAP to clarify that only one KEY can be used in this setup

--- a/config/datasets/dataset_config_template.yaml
+++ b/config/datasets/dataset_config_template.yaml
@@ -17,20 +17,26 @@ MIT:
         image: CT
         mask: RTSTRUCT
     ROI_STRATEGY: MERGE
-    ROI_MATCH_MAP: # NOTE: there can be no spaces in KEY:ROI_NAME
-        KEY:ROI_NAME
+    ROI_MATCH_MAP: KEY:ROI_NAME # NOTE: there can be no spaces in KEY:ROI_NAME and right now there can only be one KEY
+        
 
 ### READII settings
 READII:
     IMAGE_TYPES:
         regions:
-            - "full"
+            - "roi"
         permutations:
-            - "original"
+            - "sampled"
         crop:
     TRAIN_TEST_SPLIT:
         split: False
         split_variable: {}
         impute: null
+
+
+### Feature Extraction settings
+EXTRACTION:
+    METHOD: pyradiomics
+    CONFIG: pyradiomics_original_single_feature.yaml
 
 RANDOM_SEED: 10
