feat: added feature extraction settings

--- a/config/datasets/NSCLC-Radiomics.yaml
+++ b/config/datasets/NSCLC-Radiomics.yaml
@@ -37,4 +37,9 @@ READII:
         split_variable: {}
         impute: null
 
+### Feature Extraction settings
+EXTRACTION:
+    METHOD: pyradiomics
+    CONFIG: pyradiomics_original_single_feature.yaml
+
 RANDOM_SEED: 10
