--- a/pixi.toml
+++ b/pixi.toml
@@ -1,4 +1,3 @@
-
 [workspace]
 name = "readii_2_roqc"
 authors = ["Katy Scott <bhklab.katyscott@gmail.com>"]
@@ -21,7 +20,6 @@ env.PROCDATA = "${PIXI_PROJECT_ROOT}/data/procdata"
 env.RESULTS = "${PIXI_PROJECT_ROOT}/data/results"
 env.SCRIPTS = "${PIXI_PROJECT_ROOT}/workflow/scripts"
 
-
 [dependencies]
 python = ">=3.12"
 ipython = "*"
@@ -43,12 +41,16 @@ click = ">=8.2.1,<9"
 [pypi-dependencies]
 readii = ">=1.35.1, <2"
 damply = ">=0.10.0, <0.11"
+readii_2_roqc = { path = ".", editable = true }
 
 [target.linux-64.dependencies]
 bioconductor-survcomp = ">=1.56.0,<2"
 
 [tasks]
-example_script = {cmd="python $SCRIPTS/example_script.py", description="Run an example script"}
+example_script = { cmd = "python $SCRIPTS/example_script.py", description = "Run an example script" }
+generate-config = { cmd = '''
+python -c "from readii_2_roqc import DatasetSettings; print(DatasetSettings.default().model_dump_json())"
+''', description = "Generate an example configuration file" }
 
 ############################################## QUALITY ###############################################
 # Quality includes linting, type checking, and formatting
@@ -59,17 +61,14 @@ ruff = "*"
 ruff-check.cmd = ["ruff", "check"]
 ruff-check.inputs = ["config/ruff.toml", "workflow"]
 ruff-check.description = "Run ruff check"
-
 ruff-format.cmd = ["ruff", "format"]
 ruff-format.inputs = ["config/ruff.toml", "workflow"]
 ruff-format.depends-on = ["ruff-check"]
 ruff-format.description = "Run ruff format, run check first"
-
 qc.depends-on = ["ruff-format", "ruff-check"]
 qc.description = "Quality check: ruff check and format"
 
 ############################################## DOCS ################################################
-
 [feature.docs.dependencies]
 mkdocs = "*"
 mkdocs-include-markdown-plugin = ">=7.0.0,<8"
@@ -83,7 +82,3 @@ description = "Build documentation with mkdocs"
 cmd = "mkdocs serve -f mkdocs.yaml"
 depends-on = ["doc-build"]
 description = "Serve documentation with mkdocs, runs doc-build first"
-
-
-
-
