build: using local mit and added pywidget

--- a/pixi.toml
+++ b/pixi.toml
@@ -39,10 +39,12 @@ r-yaml = ">=2.3.10,<3"
 openpyxl = ">=3.1.5,<4"
 snakemake = ">=9.4.0,<10"
 click = ">=8.2.1,<9"
+ipywidgets = ">=8.1.7,<9"
 
 [pypi-dependencies]
 readii = ">=1.35.1, <2"
 damply = ">=0.10.0, <0.11"
+med-imagetools = { path = "../med-imagetools", editable = true }
 
 [target.linux-64.dependencies]
 bioconductor-survcomp = ">=1.56.0,<2"
