feat: add task to run mit from pixi toml

--- a/pixi.toml
+++ b/pixi.toml
@@ -49,17 +49,10 @@ damply = ">=0.10.0, <0.11"
 bioconductor-survcomp = ">=1.56.0,<2"
 
 [tasks]
-example_script = {cmd="python $SCRIPTS/example_script.py", description="Run an example script"}
-
-[tasks.test]
-args = []
-cmd = {cmd="python $SCRIPTS/example_script.py", description="Run an example script"}
 
 [tasks.mit]
 args = ["dataset", "modalities", "strategy", "rmap"]
-cmd = "imgtools autopipeline $RAWDATA/TCIA_{{ dataset }} --modalities {{ modalities }} --roi-strategy {{ strategy }} -rmap {{ rmap }} --filename-format "{PatientID}_{SampleNumber}/{Modality}_{SeriesInstanceUID}/{ImageID}.nii.gz"" 
-
-
+cmd = "imgtools autopipeline $RAWDATA/TCIA_{{ dataset }} $PROCDATA/TCIA_{{ dataset }}/images/mit_{{ dataset }} --modalities {{ modalities }} --roi-strategy {{ strategy }} -rmap {{ rmap }} --filename-format '{PatientID}_{SampleNumber}/{Modality}_{SeriesInstanceUID}/{ImageID}.nii.gz'" 
 
 
 ############################################## QUALITY ###############################################
