--- a/config/pyradiomics/pyradiomics_h4h_all_images_features.yaml
+++ b/config/pyradiomics/pyradiomics_h4h_all_images_features.yaml
@@ -32,19 +32,5 @@ featureClass:
     ngtdm: 
 
 setting:
-    minimumROIDimensions: 2 
-    minimumROISize: None 
-    normalize: False 
-    normalizeScale: 1 
-    removeOutliers: None 
-    resampledPixelSpacing: [1.0 1.0 1.0] 
-    interpolator: sitkBSpline 
-    preCrop: False 
-    padDistance: 5 
-    distances: [1] 
-    force2D: False 
-    force2Ddimension: 0 
-    resegmentRange: None 
-    label: 1 
-    additionalInfo: True 
     binWidth: 25
+    resampledPixelSpacing: [1., 1., 1.]
