--- a/config/datasets/HEAD-NECK-RADIOMICS-HN1.yaml
+++ b/config/datasets/HEAD-NECK-RADIOMICS-HN1.yaml
@@ -37,4 +37,9 @@ READII:
         split_variable: {}
         impute: null
 
+### Feature Extraction settings
+EXTRACTION:
+    METHOD: pyradiomics
+    CONFIG: pyradiomics_h4h_all_images_feature.yaml
+
 RANDOM_SEED: 10
