feat: add pyradiomics settings to RADCURE config

--- a/config/datasets/RADCURE.yaml
+++ b/config/datasets/RADCURE.yaml
@@ -33,4 +33,9 @@ READII:
         split_variable: {'RADCURE-challenge': ['training', 'test']}
         impute: 'training'
 
+### Feature Extraction settings
+EXTRACTION:
+    METHOD: pyradiomics
+    CONFIG: pyradiomics_original_single_feature.yaml
+
 RANDOM_SEED: 10
