--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,4 +1,5 @@
 from damply import dirs as dmpdirs
+from pathlib import Path
 
 # could alternatively pass this in the CLI via `--configfile $CONFIG/config.yaml`
 # configfile: dmpdirs.CONFIG / "datasets" / "NSCLC-Radiomics_test.yaml"
@@ -13,7 +14,9 @@ rule all:
         mit_autopipeline_index=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}" / f"mit_{config["DATASET_NAME"]}_index.csv",
         mit_niftis_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}",
         readii_images_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config["DATASET_NAME"]}",
-        feature_extraction_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / f"{config["EXTRACTION"]["METHOD"]}" / f"{config["EXTRACTION"]["METHOD"]}_{config["DATASET_NAME"]}_index.csv"
+        feature_extraction_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / f"{config["EXTRACTION"]["METHOD"]}" / f"{config["EXTRACTION"]["METHOD"]}_{config["DATASET_NAME"]}_index.csv",
+        extracted_sample_features_dir=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / config["EXTRACTION"]["METHOD"] / Path(config["EXTRACTION"]["CONFIG"]).stem),
+        extracted_dataset_features_dir=directory(dmpdirs.RESULTS / COMBINED_DATA_NAME / "features" / config["EXTRACTION"]["METHOD"] / Path(config["EXTRACTION"]["CONFIG"]).stem)
 
 
 
@@ -43,3 +46,19 @@ rule run_index:
         method=config["EXTRACTION"]["METHOD"]
     shell:
         "python workflow/scripts/feature_extraction/index.py --dataset {params.dataset} --method {params.method}"
+
+
+rule run_extract:
+    input:
+        feature_extraction_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / f"{config["EXTRACTION"]["METHOD"]}" / f"{config["EXTRACTION"]["METHOD"]}_{config["DATASET_NAME"]}_index.csv",
+        settings_file=dmpdirs.CONFIG / config["EXTRACTION"]["METHOD"] / config["EXTRACTION"]["CONFIG"]
+    output:
+        extracted_sample_features_dir=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / config["EXTRACTION"]["METHOD"] / Path(config["EXTRACTION"]["CONFIG"]).stem),
+        extracted_dataset_features_dir=directory(dmpdirs.RESULTS / COMBINED_DATA_NAME / "features" / config["EXTRACTION"]["METHOD"] / Path(config["EXTRACTION"]["CONFIG"]).stem)
+    params:
+        dataset=config["DATASET_NAME"],
+        method=config["EXTRACTION"]["METHOD"],
+        settings=config["EXTRACTION"]["CONFIG"]
+    shell:
+        "python workflow/scripts/feature_extraction/extract.py --dataset {params.dataset} --method {params.method} --settings {params.settings}"
+        
