style: correct quote nesting for inputs and outputs in Snakefile

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -11,23 +11,23 @@ include: "scripts/mit/run_mit.smk"
 rule all:
     # Target rule
     input:
-        mit_autopipeline_index=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}" / f"mit_{config["DATASET_NAME"]}_index.csv",
-        mit_niftis_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}",
-        readii_images_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config["DATASET_NAME"]}",
-        feature_extraction_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / f"{config["EXTRACTION"]["METHOD"]}" / f"{config["EXTRACTION"]["METHOD"]}_{config["DATASET_NAME"]}_index.csv",
-        extracted_sample_features_dir=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / config["EXTRACTION"]["METHOD"] / Path(config["EXTRACTION"]["CONFIG"]).stem),
-        extracted_dataset_features_dir=directory(dmpdirs.RESULTS / COMBINED_DATA_NAME / "features" / config["EXTRACTION"]["METHOD"] / Path(config["EXTRACTION"]["CONFIG"]).stem)
+        mit_autopipeline_index=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config['DATASET_NAME']}" / f"mit_{config['DATASET_NAME']}_index.csv",
+        mit_niftis_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config['DATASET_NAME']}",
+        readii_images_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config['DATASET_NAME']}",
+        feature_extraction_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / f"{config['EXTRACTION']['METHOD']}" / f"{config['EXTRACTION']['METHOD']}_{config['DATASET_NAME']}_index.csv",
+        extracted_sample_features_dir=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / config['EXTRACTION']['METHOD'] / Path(config['EXTRACTION']['CONFIG']).stem),
+        extracted_dataset_features_dir=directory(dmpdirs.RESULTS / COMBINED_DATA_NAME / "features" / config['EXTRACTION']['METHOD'] / Path(config['EXTRACTION']['CONFIG']).stem)
 
 
 
 rule run_readii:
     input:
-        mit_autopipeline_index=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}" / f"mit_{config["DATASET_NAME"]}_index.csv",
-        mit_niftis_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}",
+        mit_autopipeline_index=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config['DATASET_NAME']}" / f"mit_{config['DATASET_NAME']}_index.csv",
+        mit_niftis_directory=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config['DATASET_NAME']}",
         
     output:
-        readii_images_directory=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config["DATASET_NAME"]}"),
-        readii_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config["DATASET_NAME"]}" / f"readii_{config["DATASET_NAME"]}_index.csv",
+        readii_images_directory=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config['DATASET_NAME']}"),
+        readii_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config['DATASET_NAME']}" / f"readii_{config['DATASET_NAME']}_index.csv",
     params:
         dataset=config["DATASET_NAME"],
         seed=config["RANDOM_SEED"]
@@ -37,10 +37,10 @@ rule run_readii:
 
 rule run_index:
     input:
-        mit_simple_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config["DATASET_NAME"]}" / f"mit_{config["DATASET_NAME"]}_index-simple.csv",
-        readii_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config["DATASET_NAME"]}" / f"readii_{config["DATASET_NAME"]}_index.csv"
+        mit_simple_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"mit_{config['DATASET_NAME']}" / f"mit_{config['DATASET_NAME']}_index-simple.csv",
+        readii_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "images" / f"readii_{config['DATASET_NAME']}" / f"readii_{config['DATASET_NAME']}_index.csv"
     output:
-        feature_extraction_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / f"{config["EXTRACTION"]["METHOD"]}" / f"{config["EXTRACTION"]["METHOD"]}_{config["DATASET_NAME"]}_index.csv"
+        feature_extraction_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / f"{config['EXTRACTION']['METHOD']}" / f"{config['EXTRACTION']['METHOD']}_{config['DATASET_NAME']}_index.csv"
     params:
         dataset=config["DATASET_NAME"],
         method=config["EXTRACTION"]["METHOD"]
@@ -50,11 +50,11 @@ rule run_index:
 
 rule run_extract:
     input:
-        feature_extraction_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / f"{config["EXTRACTION"]["METHOD"]}" / f"{config["EXTRACTION"]["METHOD"]}_{config["DATASET_NAME"]}_index.csv",
-        settings_file=dmpdirs.CONFIG / config["EXTRACTION"]["METHOD"] / config["EXTRACTION"]["CONFIG"]
+        feature_extraction_index_file=dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / f"{config['EXTRACTION']['METHOD']}" / f"{config['EXTRACTION']['METHOD']}_{config['DATASET_NAME']}_index.csv",
+        settings_file=dmpdirs.CONFIG / config['EXTRACTION']['METHOD'] / config["EXTRACTION"]["CONFIG"]
     output:
-        extracted_sample_features_dir=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / config["EXTRACTION"]["METHOD"] / Path(config["EXTRACTION"]["CONFIG"]).stem),
-        extracted_dataset_features_dir=directory(dmpdirs.RESULTS / COMBINED_DATA_NAME / "features" / config["EXTRACTION"]["METHOD"] / Path(config["EXTRACTION"]["CONFIG"]).stem)
+        extracted_sample_features_dir=directory(dmpdirs.PROCDATA / COMBINED_DATA_NAME / "features" / config['EXTRACTION']['METHOD'] / Path(config["EXTRACTION"]["CONFIG"]).stem),
+        extracted_dataset_features_dir=directory(dmpdirs.RESULTS / COMBINED_DATA_NAME / "features" / config['EXTRACTION']['METHOD'] / Path(config["EXTRACTION"]["CONFIG"]).stem)
     params:
         dataset=config["DATASET_NAME"],
         method=config["EXTRACTION"]["METHOD"],
