--- a/ruff.toml
+++ b/ruff.toml
@@ -10,6 +10,7 @@ fix = true
 extend-exclude = [
     "docs/*", # Skip documentation files
     "tests/*", # Skip test files
+    "sandbox/*", # Skip sandbox files
 
 ]
 # Set the ruff cache directory
