--- a/ruff.toml
+++ b/ruff.toml
@@ -74,8 +74,8 @@ ignore = [
     "D100", # Allows modules without docstrings
     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
     "COM812", # Avoids conflict with Ruff formatter trailing comma rules
-    "D206"
-    # Allows docstrings to be formatted flexibly
+    "D206", # Allows docstrings to be formatted flexibly
+    "N813", # Allows for Camelcase to lowercase imports
 ]
 
 # https://docs.astral.sh/ruff/settings/#isort
