--- a/ruff.toml
+++ b/ruff.toml
@@ -11,6 +11,7 @@ extend-exclude = [
     "docs/*", # Skip documentation files
     "tests/*", # Skip test files
     "sandbox/*", # Skip sandbox files
+    "workflow/scripts/analysis/*" # Skip analysis scripts for now, still under development
 
 ]
 # Set the ruff cache directory
