--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -22,8 +22,9 @@ nav:
   - Home: index.md
   - Usage: usage.md
   - Data Sources: data_sources.md
-  - "Katy's Notes": devnotes/katy_notes.md
-  - "Shabnam's Notes": devnotes/shabnam_notes.md
+  - Developer Notes:
+    - "Katy's Notes": devnotes/katy_notes.md
+    - "Shabnam's Notes": devnotes/shabnam_notes.md
 
 theme: readthedocs
 
