--- a/config/datasets/CC-Radiomics-Phantom.yaml
+++ b/config/datasets/CC-Radiomics-Phantom.yaml
@@ -32,15 +32,19 @@ READII:
             - "sampled"
             - "shuffled"
         crop:
-    TRAIN_TEST_SPLIT:
-        split: False
-        split_variable: {}
-        impute: null
-
+    
 
 ### Feature Extraction settings
 EXTRACTION:
     METHOD: pyradiomics
     CONFIG: pyradiomics_original_single_feature.yaml
+
+
+### Analysis settings
+ANALYSIS:
+    TRAIN_TEST_SPLIT:
+        split: False
+        split_variable: {}
+        impute: null
 
 RANDOM_SEED: 10
