refactor: make analysis settings section for train test split in config

--- a/config/datasets/CPTAC-UCEC.yaml
+++ b/config/datasets/CPTAC-UCEC.yaml
@@ -30,6 +30,14 @@ READII:
         permutations:
             - "sampled"
         crop:
+
+### Feature Extraction settings
+EXTRACTION:
+    METHOD: pyradiomics
+    CONFIG: pyradiomics_original_single_feature.yaml
+
+### Analysis settings
+ANALYSIS:
     TRAIN_TEST_SPLIT:
         split: False
         split_variable: {}
