--- a/config/datasets/TCGA-KIRC.yaml
+++ b/config/datasets/TCGA-KIRC.yaml
@@ -28,15 +28,17 @@ READII:
         permutations:
             
         crop:
-    TRAIN_TEST_SPLIT:
-        split: False
-        split_variable: {}
-        impute: null
-
 
 ### Feature Extraction settings
 EXTRACTION:
     METHOD: pyradiomics
     CONFIG: pyradiomics_original_single_feature.yaml
+
+### Analysis settings
+ANALYSIS:
+    TRAIN_TEST_SPLIT:
+        split: False
+        split_variable: {}
+        impute: null
 
 RANDOM_SEED: 10
