--- a/config/datasets/CPTAC-PDA.yaml
+++ b/config/datasets/CPTAC-PDA.yaml
@@ -28,16 +28,17 @@ READII:
         permutations:
 
         crop:
-    TRAIN_TEST_SPLIT:
-        split: False
-        split_variable: {}
-        impute: null
-
 
 ### Feature Extraction settings
 EXTRACTION:
     METHOD: pyradiomics
     CONFIG: pyradiomics_h4h_all_images_features.yaml
 
+### Analysis settings
+ANALYSIS:
+    TRAIN_TEST_SPLIT:
+        split: False
+        split_variable: {}
+        impute: null
 
 RANDOM_SEED: 10
