--- a/config/datasets/RADCURE.yaml
+++ b/config/datasets/RADCURE.yaml
@@ -28,14 +28,18 @@ READII:
         permutations:
             - "original"
         crop:
-    TRAIN_TEST_SPLIT:
-        split: True
-        split_variable: {'RADCURE-challenge': ['training', 'test']}
-        impute: 'training'
+
 
 ### Feature Extraction settings
 EXTRACTION:
     METHOD: pyradiomics
     CONFIG: pyradiomics_original_single_feature.yaml
+
+### Analysis settings
+ANALYSIS:
+    TRAIN_TEST_SPLIT:
+        split: True
+        split_variable: {'RADCURE-challenge': ['training', 'test']}
+        impute: 'training'
 
 RANDOM_SEED: 10
