--- a/pixi.toml
+++ b/pixi.toml
@@ -100,6 +100,21 @@ cmd = ["python",
        "--parallel"
 ]
 
+[tasks.predict]
+args = ["dataset", 
+        "features", 
+        "signature",
+        {arg = "bootstrap", default = '1000'},
+        {arg = "split", default = 'NONE'}]
+cwd = "workflow/scripts/analysis/python"
+cmd = ["python",
+       "predict.py",
+       "--dataset", "{{ dataset }}",
+       "--features", "{{ features }}",
+       "--signature", "{{ signature }}",
+       "--bootstrap", "{{ bootstrap }}",
+       "--split", "{{ split }}"
+       ]
 
 ############################################## QUALITY ###############################################
 # Quality includes linting, type checking, and formatting
