--- a/ruff.toml
+++ b/ruff.toml
@@ -77,6 +77,7 @@ ignore = [
     "COM812", # Avoids conflict with Ruff formatter trailing comma rules
     "D206", # Allows docstrings to be formatted flexibly
     "N813", # Allows for Camelcase to lowercase imports
+    "T201", # Allows for print statements
 ]
 
 # https://docs.astral.sh/ruff/settings/#isort
