--- a/pixi.toml
+++ b/pixi.toml
@@ -89,7 +89,11 @@ cmd = ["python",
 ]
 
 [tasks.extract]
-args = ["dataset", "method", "settings"]
+args = ["dataset", 
+        "method", 
+        "settings",
+        {arg = "overwrite", default = "False"},
+        {arg = "parallel", default = "True"}]
 depends-on = [{ "task" = "index", "args" = ["{{ dataset }}", "{{ method }}"] }]
 cwd = "workflow/scripts/feature_extraction"
 cmd = ["python",
@@ -97,7 +101,8 @@ cmd = ["python",
        "--dataset", "{{ dataset }}",
        "--method", "{{ method }}",
        "--settings", "{{ settings }}",
-       "--parallel"
+       "--overwrite", "{{ overwrite }}",
+       "--parallel", "{{ parallel }}"
 ]
 
 [tasks.predict]
