--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ dependencies = [
     "pydantic-settings>=2.9.1,<3", 
     "med-imagetools>=2.10.0,<3", 
     "readii>=1.35.1,<2",
-    "numpy>=2.2.5,<3",
-    "scikit-learn>=1.6.1,<2",
-    "scikit-survival>=0.24.1,<0.25",
-    "openpyxl>=3.1.5,<4",
-    "click>=8.2.1,<9",
-    "damply>=0.10.0, <0.11"
+    # "numpy>=2.2.5,<3",
+    # "scikit-learn>=1.6.1,<2",
+    # "scikit-survival>=0.24.1,<0.25",
+    # "openpyxl>=3.1.5,<4",
+    # "click>=8.2.1,<9",
+    # "damply>=0.10.0, <0.11"
 ]
 
 [build-system]
