refactor: update RADCURE settings

--- a/config/datasets/RADCURE.yaml
+++ b/config/datasets/RADCURE.yaml
@@ -16,24 +16,21 @@ MIT:
     MODALITIES: 
         image: CT
         mask: RTSTRUCT
-    ROI_STRATEGY: MERGE
-    ROI_MATCH_MAP: # NOTE: there can be no spaces in KEY:ROI_NAME
-        KEY:ROI_NAME
+    ROI_STRATEGY: SEPARATE
+    ROI_MATCH_MAP: ROI:GTVp
 
 ### READII settings
 READII:
     IMAGE_TYPES:
         regions:
-            - "full"
         permutations:
-            - "original"
         crop:
 
 
 ### Feature Extraction settings
 EXTRACTION:
     METHOD: pyradiomics
-    CONFIG: pyradiomics_original_single_feature.yaml
+    CONFIG: pyradiomics_h4h_all_images_features.yaml
 
 ### Analysis settings
 ANALYSIS:
