feat: add Spherical Disproportion shape feature

--- a/config/pyradiomics/pyradiomics_h4h_all_images_features.yaml
+++ b/config/pyradiomics/pyradiomics_h4h_all_images_features.yaml
@@ -9,12 +9,13 @@ imageType:
 
 featureClass:
     shape:
-        - VoxelVolume
         - MeshVolume
+        - VoxelVolume
         - SurfaceArea
         - SurfaceVolumeRatio
-        - Compactness1
         - Sphericity
+        - Compactness1
+        - SphericalDisproportion
         - Maximum3DDiameter
         - Maximum2DDiameterSlice
         - Maximum2DDiameterColumn
