--- a/config/pyradiomics/pyradiomics_original_all_features.yaml
+++ b/config/pyradiomics/pyradiomics_original_all_features.yaml
@@ -9,6 +9,7 @@ featureClass:
         - SurfaceVolumeRatio
         - Compactness1
         - Sphericity
+        - SphericalDisproportion
         - Maximum3DDiameter
         - Maximum2DDiameterSlice
         - Maximum2DDiameterColumn
